--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -18,6 +18,13 @@
     gap: 2em;
 }
 
+.error {
+    font-weight: normal;
+    margin: 0.5em 0 0 0.3em;
+    font-size: 0.9em;
+    color: red;
+}
+
 .main-container h4 {
     font-size: 1.5em;
     color: #E6E6E6;
